--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "component based frontend framework",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "gulp && gulp watch"
   },
   "keywords": [
     "stache",
