--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-jshint": "^2.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
+    "gulp-sass-glob": "^1.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "live-server": "^1.2.1",
