--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-auto-imports": "^3.1.1",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-ignore": "^3.0.0",
     "gulp-jshint": "^2.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
